--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "glslCanvas": "^0.2.6",
     "maplibre-gl": "^3.6.2",
     "next": "14.0.3",
     "react": "^18",
